fix(position): use `em`s with gap

--- a/css/utility/_position.scss
+++ b/css/utility/_position.scss
@@ -41,7 +41,7 @@
 }
 
 @mixin gap($gap: 1) {
-  gap: #{$gap + 'rem'};
+  gap: #{$gap + 'em'};
 }
 
 @mixin auto-grid($n) {
